<resources>
    <string name="app_name">MenusAndPickers</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="smile">Smile</string>
    <string name="contact">Contact</string>
    <string name="appbar_with_options_menu">AppBar with options menu</string>
    <string name="contextual_menu">Contextual Menu</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="dialogs">Dialogs</string>
    <string name="pickers">Pickers</string>
    <string name="back">Back</string>
    <string name="activity_2">Activity 2</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="open_nav">open_nav</string>
    <string name="close_nav">close_nav</string>
    <string name="long_press_me_for_contextual_menu">Long-Press Me for Contextual Menu</string>
    <string name="show_popup_menu">Show Popup Menu</string>
    <string name="menu_item_1">Item 1</string>
    <string name="menu_item_2">Item 2</string>
    <string name="menu_item_3">Item 3</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="context_share">Share</string>
    <string name="dMessage">This message is a example of Dialog Alert</string>
    <string name="Pick_a_Time">Pick a Time</string>
    <string name="Pick_a_Date">Pick a Date</string>
    <string name="sTime">Selected Time: </string>
    <string name="sDate">Selected Date: </string>
</resources>